force-app/main/default/objects/Stop__c/Stop__c.object-meta.xml
<CustomObject>
    <label>Stop</label>
    <nameField>
        <label>Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>