force-app/main/default/objects/Stop__c/fields/Stop_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Stop_Completion_Status__c</fullName>
    <label>Stop Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>