force-app/main/default/objects/Stop__c/fields/Waste_Type__c.field-meta.xml
<CustomField>
    <fullName>Waste_Type__c</fullName>
    <label>Waste Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Recyclable</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Liquid Waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>